Job Application for Senior Front-End Engineer (React) at LendingTree. Castlight Health Careers - Front End Software Engineer. Senior Front End Developer - Latitude, Inc. - Career Page. Stellenangebot: Frontend Entwickler – Designafin (w/m/d) (Berlin) – dasauge® Stellenmarkt. Job @ NEUGELB Studios (Frankfurt): Frontend Develo... | JOIN.       Senior Frontend Developer (f/m/d) @realxdata GmbH - Rheingau Founders Portfolio     . vpTech - Front-end Developer. Job Application for Senior Front End Software Engineer at Domino Data Lab. Senior Front End Developer(Angular/HTML5/CSS3) - MAS Global Consulting - Career Page. Mid-Senior Front End Developer(Angula/HTML5/CSS3) - MAS Global Consulting - Career Page. Liferay, Inc. Careers - Frontend Engineer (client-facing). Job @ Daizu | sleep.ink (Berlin): Frontend Develop... | JOIN. Job @ Daizu | sleep.ink (Berlin): Frontend Develop... | JOIN. Software Engineer Frontend (f/m/d) - collect Artificial Intelligence GmbH. Verisk Front End Web Developer | SmartRecruiters. Job @ uptodate Ventures (Munich): Frontend Develop... | JOIN. Senior Front End Developer (Azure) - Mexico - Modus Create, Inc. - Career Page. Frontend Software Engineer - Grafana Labs. Front End Developer - Attensi. Memeber Technical Staff - Front End Development. Job Application for Senior Front End Developer at Bandwidth. Job @ fintory (Duisburg): Front-end developer (m/f/d) | JOIN. Job @ SimScale (Munich): Senior Frontend Developer... | JOIN. RingCentral Careers - Front-end Engineer. Job @ AST Engineering  (Ottobrunn): Frontend Entwi... | JOIN. Senior Front End Developer (ReactJS) - Mexico - Modus Create, Inc. - Career Page. Job Application for Frontend Engineer, Defend at GitLab. Job Application for Frontend Engineer - Manage at GitLab. Job Application for Frontend Engineer, Defend at GitLab. Job Application for Frontend Engineer, Defend at GitLab. Job Application for Frontend Engineer, Defend at GitLab. Job Application for Frontend Engineer, Secure at GitLab. Job

--- a/frontend.html
+++ b/frontend.html
@@ -166,7 +166,7 @@ help us scale to the next level!</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/gitlab/jobs/4502532002'>Job Application for Frontend Engineer, Secure at GitLab</a></h5> 
+<h5><a href='https://boards.greenhouse.io/gitlab/jobs/4502532002'>Job Application for Frontend Engineer, Secure at GitLab</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -312,11 +312,11 @@ help us scale to the next level!</p>
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CITECH/743999698596337-concepteur-developpeur-front-end-h-f-'>CITECH Concepteur / D?veloppeur Front End (H/F) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CITECH/743999698596337-concepteur-developpeur-front-end-h-f-'>CITECH Concepteur / D?veloppeur Front End (H/F) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://masglobalconsulting.applytojob.com/apply/BAY4lOgMbL/Senior-Front-End-DeveloperAngularReactHTML5CSS3'>Senior Front End Developer(Angular/React/HTML5/CSS3) - MAS Global Consulting - Career Page</a></h5> 
+<h5><a href='http://masglobalconsulting.applytojob.com/apply/BAY4lOgMbL/Senior-Front-End-DeveloperAngularReactHTML5CSS3'>Senior Front End Developer(Angular/React/HTML5/CSS3) - MAS Global Consulting - Career Page</a></h5> 
 <p><span class="badge badge-light">Tampa, FL Medellin, Colombia</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -332,7 +332,7 @@ help us scale to the next level!</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://emailmeter.recruiterbox.com/jobs/fk03rfa/?source=twitter'>
+<h5><a href='https://emailmeter.recruiterbox.com/jobs/fk03rfa/?source=twitter'>
     Frontend Developer Intern at Email Meter
 </a></h5> 
 <p><span class="badge badge-light">Madrid Madrid Madrid United States New York</span></p>
@@ -350,7 +350,7 @@ help us scale to the next level!</p>
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tedconferencesllc.applytojob.com/apply/9td5jDSovf/Frontend-Engineer?utm_source=TED+Staff+for+Technically+Speaking&utm_campaign=a844a204d5-EMAIL_CAMPAIGN_2019_10_29_01_29&utm_medium=email&utm_term=0_3b164e9b38-a844a204d5-302500633'>Front-end Engineer - TED Conferences LLC - Career Page</a></h5> 
+<h5><a href='https://tedconferencesllc.applytojob.com/apply/9td5jDSovf/Frontend-Engineer?utm_source=TED+Staff+for+Technically+Speaking&utm_campaign=a844a204d5-EMAIL_CAMPAIGN_2019_10_29_01_29&utm_medium=email&utm_term=0_3b164e9b38-a844a204d5-302500633'>Front-end Engineer - TED Conferences LLC - Career Page</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -362,7 +362,7 @@ help us scale to the next level!</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/menlosecurity/jobs/4501326002'>Job Application for Front End Software Engineer at Menlo Security</a></h5> 
+<h5><a href='https://boards.greenhouse.io/menlosecurity/jobs/4501326002'>Job Application for Front End Software Engineer at Menlo Security</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -390,7 +390,7 @@ help us scale to the next level!</p>
 <p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dept/jobs/1935237'>Job Application for Frontend Developer (m/w/div) at Dept</a></h5> 
+<h5><a href='https://boards.greenhouse.io/dept/jobs/1935237'>Job Application for Frontend Developer (m/w/div) at Dept</a></h5> 
 <p><span class="badge badge-light">Hamburg  Hamburg</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -420,7 +420,7 @@ help us scale to the next level!</p>
 <p><span class="badge badge-light">Krakow, Poland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/elementai/jobs/1919939'>Job Application for D?veloppeur(euse) front-end - AI Enablement | Front-End Developer - AI Enablement  at Element AI</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/elementai/jobs/1919939'>Job Application for D?veloppeur(euse) front-end - AI Enablement | Front-End Developer - AI Enablement  at Element AI</a></h5> 
 <p><span class="badge badge-light">Montreal</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -446,7 +446,7 @@ help us scale to the next level!</p>
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qSnaVfw4&k=Job&j=oVXebfw1&__jvst=Employee&__jvsd=sulY9hwI&__jvsc=Twitter&bid=nyLipMwh'>DNEG Careers - Front End Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qSnaVfw4&k=Job&j=oVXebfw1&__jvst=Employee&__jvsd=sulY9hwI&__jvsc=Twitter&bid=nyLipMwh'>DNEG Careers - Front End Developer</a></h5> 
 <p><span class="badge badge-light">Mumbai Chennai, India</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
