--- a/machine.html
+++ b/machine.html
@@ -123,7 +123,7 @@ team?...</p>
 <p><span class="badge badge-light">Renningen, Germany</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://neya.applytojob.com/apply/Jux9HixKaS/Machine-Learning-And-Computer-Vision-Engineer-multiple-Levels'>Machine Learning and Computer Vision Engineer (multiple levels) - Neya Systems LLC - Career Page</a></h5> 
+<h5><a href='http://neya.applytojob.com/apply/Jux9HixKaS/Machine-Learning-And-Computer-Vision-Engineer-multiple-Levels'>Machine Learning and Computer Vision Engineer (multiple levels) - Neya Systems LLC - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -241,7 +241,7 @@ Deep Learning (Linear, CNN, GRU, LSTM, Attention, Transformer), etc.</p>
 <p><span class="badge badge-light">Denmark</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Expeditors/743999698180457-data-analyst-ii-iii-machine-learning-'>Expeditors Data Analyst II/III (Machine Learning) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Expeditors/743999698180457-data-analyst-ii-iii-machine-learning-'>Expeditors Data Analyst II/III (Machine Learning) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -345,7 +345,7 @@ healthcare?...</p>
 <p><span class="badge badge-light">Montreal, Canada  Montreal</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/optimusride/cb2790e0-9b59-4ae0-b018-5ec4a08ea923'>Optimus Ride - Software Engineer - Machine Learning</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/optimusride/cb2790e0-9b59-4ae0-b018-5ec4a08ea923'>Optimus Ride - Software Engineer - Machine Learning</a></h5> 
 <p><span class="badge badge-light">Boston, MA  Boston</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -366,7 +366,7 @@ healthcare?...</p>
 <p>Oct 8, 2019 ... At Blueground, our vision is to make people feel at home wherever they choose 
 to live.To do this, we offer beautifully furnished and thoughtfully-equipped?...</p>
 <hr/>
-<h5><a href='https://neimanmarcus.referrals.selectminds.com/jobs/machine-learning-engineer-12731'>Machine Learning Engineer - Neiman Marcus Group Careers Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://neimanmarcus.referrals.selectminds.com/jobs/machine-learning-engineer-12731'>Machine Learning Engineer - Neiman Marcus Group Careers Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -410,7 +410,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p>2 days ago ... Cruise is looking for ML optimization engineers to help us invest in tools to 
 optimize deep learning models for efficient inference. These optimizations are?...</p>
 <hr/>
-<h5><a href='https://bigcloud.io/jobs/senior-machine-learning-researcher/'>Senior Machine Learning Researcher | Big Cloud Recruitment</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bigcloud.io/jobs/senior-machine-learning-researcher/'>Senior Machine Learning Researcher | Big Cloud Recruitment</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-22</p>
 <hr/>
@@ -422,7 +422,7 @@ optimize deep learning models for efficient inference. These optimizations are?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-22</p>
 <hr/>
-<h5><a href='http://chiselai.applytojob.com/apply/QigNU3K1y8/Machine-Learning-Scientist'>Machine Learning Scientist - Chisel AI - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://chiselai.applytojob.com/apply/QigNU3K1y8/Machine-Learning-Scientist'>Machine Learning Scientist - Chisel AI - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 14, 2019 ... Reporting to our Data Science Lead, you will collaborate with our team of 
 Machine Learning Scientists to explore and understand the latest in AI, NLP, and 
@@ -449,7 +449,7 @@ ML;?...</p>
 <p>Oct 11, 2019 ... Machine Learning Engineer. Seattle, WA. Engineering ? Machine Learning. Full-
 time. Apply for this job. Loftium is a Seattle-based, fast-growing start-up that?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AJobThing1/743999697823053-machine-learning-engineer-yogyakarta-indonesia-'>A Job Thing Machine Learning Engineer (Yogyakarta, Indonesia) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AJobThing1/743999697823053-machine-learning-engineer-yogyakarta-indonesia-'>A Job Thing Machine Learning Engineer (Yogyakarta, Indonesia) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Indonesia Indonesia Indonesia</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -479,7 +479,7 @@ time. Apply for this job. Loftium is a Seattle-based, fast-growing start-up that
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-21</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/sonyinteractiveentertainmentplaystation/jobs/1843542'>Job Application for Machine Learning Intern at Sony Interactive Entertainment PlayStation</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sonyinteractiveentertainmentplaystation/jobs/1843542'>Job Application for Machine Learning Intern at Sony Interactive Entertainment PlayStation</a></h5> 
 <p><span class="badge badge-light">Santa Monica</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
