NICE Actimize Careers - Data Scientist - Actimize division. Eventbrite - Senior Data Scientist. Ceres Imaging - Geospatial Data Scientist. Farfetch Careers - Director of Data Science. Aroghia Group Sr. Big Data Developer /w Data Science for Leading Global Sportswear Co. -- W2 only, no C2C! | SmartRecruiters.     Data Scientist - Fraud at Simpl . Loadsmart - Senior Data Science Engineer. Knock, Inc - Data Scientist. WW International (formerly Weight Watchers) Careers - Senior Data Scientist. Job @ Integr8 media (Berlin): Data Scientist (m/w/d) | JOIN. Farfetch Careers - Data Scientist - Recommendations. Wish - Lead Data Scientist. Data Scientist - Asurion Careers. Assistant Professor - Data Science Ethics (JPF02271) - UC San Diego AP On-Line Recruit. Associate or Full Professor - Data Science Ethics (JPF02273) - UC San Diego AP On-Line Recruit. Align Technology Careers - Senior Data Scientist. Job Application for Senior Data Scientist at Wrike. Gameloft Scientifique des données - Data Scientist | SmartRecruiters. Biogen Co-op: Human Performance/EHS Data Scientist | SmartRecruiters. Founders Factory  - Data Scientist (BeRightBack). GRAIL - Clinical Data Scientist. Department for International Trade  - Digital, Data and Technology Careers - Data Scientist / Senior Data Scientist. Job Application for Data Science Team Lead at THE ICONIC. Job @ talpasolutions (Essen): Data Scientist | JOIN. Job @ talpasolutions (Essen): Senior Data Scientist | JOIN. Business Engineer/IT Requirements Engineer (m/w) | PROSTAFF – Swiss IT and Data Science Recruitment &amp; HR-Services. Freedom Financial Network Careers - Senior Data Scientist. Junior Data Scientist (Working Student m/f/d). (Senior) Data Scientist -  The Adecco Group Careers. Farfetch Careers - Principal Data Scientist. Data Science Lead. Senior JAVA Fullstack Developer | PROSTAFF – Swiss IT and Data Science Recruitment &amp; HR-Services. Data Scientist - SparkCognition - Career Page. Data Scientist - Oil & Gas Industry - Sp

--- a/data-science.html
+++ b/data-science.html
@@ -91,7 +91,7 @@
 <p><span class="badge badge-light">Hillsboro, OR, USA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='http://getsimpl.recruiterbox.com/jobs/fk0jqu6'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://getsimpl.recruiterbox.com/jobs/fk0jqu6'>
     Data Scientist - Fraud at Simpl
 </a></h5> 
 <p><span class="badge badge-light">Bengaluru</span></p>
@@ -169,7 +169,7 @@
 <p><span class="badge badge-light">Essen, Germany</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://talpasolutions.join.com/jobs/463825-senior-data-scientist'>Job @ talpasolutions (Essen): Senior Data Scientist | JOIN</a></h5> 
+<h5><a href='https://talpasolutions.join.com/jobs/463825-senior-data-scientist'>Job @ talpasolutions (Essen): Senior Data Scientist | JOIN</a></h5> 
 <p><span class="badge badge-light">Essen, Germany</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -213,7 +213,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://punchh.com/careers/from-intern-to-employee-how-i-found-my-full-time-fit-2/'>Learning Data Science Outside of the Classroom - Punchh</a></h5> 
+<h5><a href='https://punchh.com/careers/from-intern-to-employee-how-i-found-my-full-time-fit-2/'>Learning Data Science Outside of the Classroom - Punchh</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -345,7 +345,7 @@ Customer Lifecycle Management & Behavior Team you will be responsible for?...</p
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://netimpactstrategies.applytojob.com/apply/k90r2ujKhS/Data-Scientist'>Data Scientist - NetImpact Strategies - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://netimpactstrategies.applytojob.com/apply/k90r2ujKhS/Data-Scientist'>Data Scientist - NetImpact Strategies - Career Page</a></h5> 
 <p><span class="badge badge-light">Vienna Vienna</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -363,11 +363,11 @@ Customer Lifecycle Management & Behavior Team you will be responsible for?...</p
 <p><span class="badge badge-light">Sunnyvale, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/upside/f9fb4434-08d2-4013-a592-1896d328087d'>Upside - Data Science Business Analyst</a></h5> 
+<h5><a href='https://jobs.lever.co/upside/f9fb4434-08d2-4013-a592-1896d328087d'>Upside - Data Science Business Analyst</a></h5> 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=o1K29fwG&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=njSgpMw7'>Freedom Financial Network Careers - Senior Data Scientist</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=o1K29fwG&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=njSgpMw7'>Freedom Financial Network Careers - Senior Data Scientist</a></h5> 
 <p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -383,7 +383,7 @@ Customer Lifecycle Management & Behavior Team you will be responsible for?...</p
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/similarweb/jobs/1939308'>Job Application for Data Scientist at SimilarWeb</a></h5> 
+<h5><a href='https://boards.greenhouse.io/similarweb/jobs/1939308'>Job Application for Data Scientist at SimilarWeb</a></h5> 
 <p><span class="badge badge-light">Tel Aviv</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -409,7 +409,7 @@ Customer Lifecycle Management & Behavior Team you will be responsible for?...</p
 <p><span class="badge badge-light">Denmark</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bah.wd1.myworkdayjobs.com/BAH_Jobs/job/USA-DC-Washington-901-15th-St-NW/Data-Scientist_R0071613'>Data Scientist</a></h5> 
+<h5><a href='https://bah.wd1.myworkdayjobs.com/BAH_Jobs/job/USA-DC-Washington-901-15th-St-NW/Data-Scientist_R0071613'>Data Scientist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Data Scientist. The Challenge: Do you want to be a Data Scientist? Are you 
 innately curious, a natural born problem solver, a contrarian or a risk taker?</p>
